JMX needs SM