@@ -30,7 +30,7 @@
  *
  * @run clean NonJMXPrincipalsTest SimpleStandard SimpleStandardMBean
  * @run build NonJMXPrincipalsTest SimpleStandard SimpleStandardMBean
- * @run main NonJMXPrincipalsTest
+ * @run main/othervm -Djava.security.manager=allow NonJMXPrincipalsTest
  */
 
 import java.io.File;
